syntax = "proto3";
package KFMsg;

//////////////////////////////////////////////////////////////////////////////////
// 渠道
enum ChannelEnum
{
	UnknowChannel = 0;	// 无效
	Internal = 1;		// 内部测试
	WeiXin = 2;			// 微信
	Steam = 3;			// steam
}

//////////////////////////////////////////////////////////////////////////////////
enum KickEnum
{
	UnknowKick = 0;			// 无效
	KickByLogin = 1;		// 被登录踢下线
	KickByPlatform = 2;		// 被平台踢下线
}
//////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////////
// 逻辑状态
enum StatusEnum
{
	InitStatus		= 0;		// 初始状态
	DoneStatus 		= 1;		// 已经完成
	ReceiveStatus	= 2;		// 已经领取奖励

	Remove			= 3;		// 删除	
	ReceiveRemove 	= 4;		// 领取并删除
}